Fix spacing

--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -103,6 +103,11 @@
 	.testimonial {
 		width: 18rem;
 	}
+
+	.section {
+		padding: 0;
+		margin: 22px;
+	}
 }
 
 @media (max-width: 480px) {
